--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
     "description": "Repo con retos de https://codember.dev/ por manuelpz",
     "type": "module",
     "scripts": {
-      "challenge01": "node challenge01",
-      "challenge02": "node challenge02",
-      "challenge03": "node challenge03",
-      "challenge04": "node challenge04"
+      "challenge01v1": "node 2022/challenge01/challenge01",
+      "challenge02v1": "node 2022/challenge02/challenge02",
+      "challenge03v1": "node 2022/challenge03/challenge03",
+      "challenge04v1": "node 2022/challenge04/challenge04",
+      "challenge01v2": "node 2023/challenge01/challenge01"
     },
     "author": "Manuel López Fernández",
     "license": "MIT"
