--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "challenge01v2": "node 2023/challenge01/challenge01",
     "challenge02v2": "node 2023/challenge02/challenge02",
     "challenge03v2": "node 2023/challenge03/challenge03",
-    "challenge04v2": "node 2023/challenge04/challenge04"
+    "challenge04v2": "node 2023/challenge04/challenge04",
+    "challenge05v2": "node 2023/challenge05/challenge05"
   },
   "author": "Manuel López Fernández",
   "license": "MIT"
